--- a/express-app/views/about.ejs
+++ b/express-app/views/about.ejs
@@ -1,21 +1,7 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog Ninja | <%= title %></title>
-  </head>
+  <%- include("./partials/head.ejs") %>
   <body>
-    <nav>
-      <div class="site-title">
-        <a href="/"><h1>Blog Ninja</h1></a>
-        <p>A Net Ninja Site</p>
-      </div>
-      <ul>
-        <li><a href="/">Blogs</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/blogs/create">New Blog</a></li>
-      </ul>
-    </nav>
+    <%- include("./partials/nav.ejs") %>
     <div class="about content">
       <h2>About Us</h2>
       <p>
@@ -31,5 +17,6 @@
         QUARAT ILLO A MODE TENTANTEA FDHSAOFDSAHO JPODSA
       </p>
     </div>
+    <%- include("./partials/footer.ejs") %>
   </body>
 </html>
